@@ -1,5 +1,17 @@
 2008-04-16  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/ce-mobile-wizard.glade
+	  src/connection-editor/mobile-wizard.c
+	  src/connection-editor/mobile-wizard.h
+	  src/connection-editor/Makefile.am
+	  po/POTFILES.in
+		- Add connection type chooser
+
+	* src/connection-editor/nm-connection-list.c
+		- (create_new_connection_for_type): handle mobile broadband too
+
+2008-04-16  Dan Williams  <dcbw@redhat.com>
+
 	* src/utils/utils.c
 		- (utils_get_device_description): fix space addition when munging
 			device descriptions
